fixes "jumping" in main viewport size -matt

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -78,12 +78,14 @@ ion-title {
   }
 
   den-page {
-    width: 800px;
+    min-width: 800px;
+    max-width: 800px;
   }
 }
 
 @media(min-width: 1400px) {
   den-page {
-    width: 1000px;
+    min-width: 1000px;
+    max-width: 1000px;
   }
 }
